# associated-token-account

./: .gitmodules  Cargo.toml  Makefile  README.md  SECURITY.md  codama.mjs  package.json  pnpm-lock.yaml
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
compat/: Cargo.toml
compat/tests/: create_always.rs  create_idempotent.rs  create_shared.rs
interface/: Cargo.toml
interface/src/: address.rs  error.rs  instruction.rs  lib.rs
mollusk_harness/: Cargo.toml
mollusk_harness/src/: lib.rs
p-ata/: Cargo.toml  README.md  build.rs
p-ata/.cargo/: config.toml
p-ata/benches/: account_comparison.rs  account_templates.rs  ata_instruction_benches.rs  common.rs  common_builders.rs  comparison_benchmark.rs  consolidated_builders.rs  constants.rs  failure_scenarios.rs  formatter.rs
p-ata/benches/common/: account_comparison.rs  account_templates.rs  common.rs  common_builders.rs  constants.rs  formatter.rs  mod.rs
p-ata/interface/: Cargo.toml
p-ata/interface/src/: error.rs  instruction.rs  lib.rs
p-ata/old_ata_tests/: process_create_associated_token_account.rs  recover_nested.rs  spl_token_create.rs
p-ata/pinocchio-doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
p-ata/pinocchio-doc/pinocchio/: all.html  constant.BPF_ALIGN_OF_U128.html  constant.MAX_TX_ACCOUNTS.html  constant.NON_DUP_MARKER.html  constant.SUCCESS.html  index.html  macro.default_allocator!.html  macro.default_allocator.html  macro.default_panic_handler!.html  macro.default_panic_handler.html  macro.entrypoint.html  macro.impl_sysvar_get.html  macro.lazy_entrypoint!.html  macro.lazy_entrypoint.html  macro.lazy_program_entrypoint!.html  macro.lazy_program_entrypoint.html  macro.msg.html  macro.no_allocator!.html  macro.no_allocator.html  macro.nostd_panic_handler!.html  macro.nostd_panic_handler.html  macro.program_entrypoint!.html  macro.program_entrypoint.html  macro.seeds!.html  macro.seeds.html  macro.signer!.html  macro.signer.html  sidebar-items.js  type.ProgramResult.html
p-ata/pinocchio-doc/pinocchio/account_info/: constant.DATA_MASK.html  constant.DATA_SHIFT.html  constant.GET_LEN_MASK.html  constant.LAMPORTS_MASK.html  constant.LAMPORTS_SHIFT.html  constant.MAX_PERMITTED_DATA_INCREASE.html  constant.SET_LEN_MASK.html  enum.BorrowState.html  index.html  sidebar-items.js  struct.Account.html  struct.AccountInfo.html  struct.Ref.html  struct.RefMut.html
p-ata/pinocchio-doc/pinocchio/cpi/: constant.MAX_CPI_ACCOUNTS.html  constant.MAX_RETURN_DATA.html  fn.get_return_data.html  fn.invoke.html  fn.invoke_signed.html  fn.invoke_signed_unchecked.html  fn.invoke_unchecked.html  fn.set_return_data.html  fn.slice_invoke.html  fn.slice_invoke_signed.html  index.html  sidebar-items.js  struct.ReturnData.html
p-ata/pinocchio-doc/pinocchio/entrypoint/: constant.HEAP_LENGTH.html  constant.HEAP_START_ADDRESS.html  constant.SUCCESS.html  index.html  (+4 more)
p-ata/pinocchio-doc/pinocchio_associated_token_account/: all.html  constant.ID.html  fn.check_id.html  fn.id.html  index.html  sidebar-items.js
p-ata/pinocchio-doc/pinocchio_log/: all.html  index.html  macro.log.html  sidebar-items.js
p-ata/pinocchio-doc/pinocchio_log_macro/: all.html  constant.DEFAULT_BUFFER_SIZE.html  index.html  macro.log.html  sidebar-items.js  struct.LogArgs.html
p-ata/pinocchio-doc/pinocchio_memo/: all.html  constant.ID.html  fn.check_id.html  fn.id.html  index.html  sidebar-items.js
p-ata/pinocchio-doc/pinocchio_pubkey/: all.html  fn.decode_32_const.html  fn.from_str.html  index.html  macro.declare_id.html  macro.pubkey.html  sidebar-items.js
p-ata/pinocchio-doc/pinocchio_system/: all.html  constant.ID.html  fn.check_id.html  fn.id.html  index.html
p-ata/pinocchio-doc/pinocchio_token/: all.html  constant.ID.html  constant.UNINIT_BYTE.html  fn.check_id.html  fn.id.html  fn.write_bytes.html  index.html  sidebar-items.js
p-ata/programs/: pinocchio_token_program-keypair.json  spl_token_2022-keypair.json
p-ata/scripts/: run-comparison.sh  run_local_benchmarks.sh
p-ata/src/: account.rs  entrypoint.rs  lib.rs  processor.rs  recover.rs  size.rs  test_helpers.rs  test_utils.rs
p-ata/src/tests/: create_idempotent.rs  mod.rs  mollusk_adapter.rs  non_canonical_bump.rs  program_test.rs  test_account_length_limits.rs  test_account_parsing.rs  test_account_validation.rs  test_address_derivation.rs  test_extension_size_exhaustive.rs  test_extension_size_validation.rs  test_extension_utils.rs  test_idemp_oncurve_attack.rs  test_instruction_builders.rs  test_mollusk_non_canonical_bump.rs  test_utils.rs
p-ata/src/tools/: account.rs
p-ata/tests/: README.md  mod.rs
p-ata/tests/bump/: mod.rs  test_bump_utils.rs  test_idemp_oncurve_attack.rs  test_mollusk_non_canonical_bump.rs
p-ata/tests/migrated/: create_idempotent.rs  extended_mint.rs  mod.rs  process_create_associated_token_account.rs  recover_nested.rs  spl_token_create.rs
p-ata/tests/token_account_len/: mod.rs  test_account_length_limits.rs
p-ata/tests/utils/: mod.rs  mollusk_adapter.rs
pinocchio/clients/rust/: Cargo.toml
pinocchio/interface/: Cargo.toml  README.md  idl.json
pinocchio/interface/src/: error.rs  instruction.rs  lib.rs  pda.rs
pinocchio/program/: Cargo.toml  README.md
pinocchio/program/benches/: compute_units.md  compute_units.rs
pinocchio/program/fuzz/: mollusk-config.json
pinocchio/program/src/: batch.rs  cold_error.rs  create.rs  entrypoint.rs  error.rs  lib.rs  processor.rs  recover.rs  size.rs  token_account.rs
pinocchio/program/tests/: account_len.rs  bump.rs  common.rs  create_with_args.rs  create_with_rent_account.rs  multisig.rs  recover_nested.rs  size.rs  t22_account_len.rs  t22_extensions.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
program/src/tools/: account.rs
program/tests/: create_always.rs  create_idempotent.rs  create_return_data.rs  create_shared.rs  extended_mint.rs  process_create_associated_token_account.rs  program_test.rs  recover_nested.rs  spl_token_create.rs  utils.rs
test-harness/: Cargo.toml
test-harness/src/: lib.rs
(+3232 files in other folders)
