[workspace]
resolver = "2"
members = ["interface", "program", "mollusk_harness", "pinocchio/interface", "pinocchio/program"]

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-alloc", "custom-heap", "custom-panic", "frozen-abi", "no-entrypoint"))',
]
