[package]
name = "ata-compat-tests"
version = "0.1.0"
edition = "2021"
description = "Shared compatibility tests for legacy and Pinocchio ATA programs"
publish = false

[dev-dependencies]
mollusk-svm = "0.7.2"
solana-instruction = "3.2.0"
solana-program-error = "3.0.0"
solana-program-pack = "3.1.0"
solana-address = "2.2.0"
spl-associated-token-account-interface = { version = "2.0.0", path = "../interface" }
spl-associated-token-account-mollusk-harness = { version = "1.0.0", path = "../mollusk_harness" }
spl-token-2022-interface = "2.1.0"
spl-token-interface = "2.0.0"
test-case = "3.3.1"

[lints]
workspace = true
