[package]
name = "spl-associated-token-account-interface"
version = "2.0.0"
description = "Solana Program Library Associated Token Account Interface"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[features]
borsh = ["dep:borsh"]

[dependencies]
borsh = { version = "1", optional = true, features = ["unstable__schema"] }
solana-instruction = { version = "3.0.0", features = ["std"] }
solana-pubkey = { version = "3.0.0", features = ["curve25519"] }

[dev-dependencies]
solana-sdk-ids = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
