[package]
name = "spl-associated-token-account-interface"
version = "2.0.0"
description = "Solana Program Library Associated Token Account Interface"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[features]
borsh = ["dep:borsh"]

[dependencies]
borsh = { version = "1", optional = true, features = ["unstable__schema"] }
num-derive = "0.4"
num-traits = "0.2"
solana-instruction = "3.3.0"
solana-program-error = "3.0"
solana-pubkey = { version = "4.1.0", default-features = false, features = ["curve25519"] }

[dev-dependencies]
solana-sdk-ids = "3.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
