[package]
name = "spl-associated-token-account-mollusk-harness"
version = "1.0.0"
description = "SPL Associated Token Account Mollusk Testing Harness"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
mollusk-svm = { version = "=0.10.3", path = "../../mollusk/harness" }
mollusk-svm-programs-token = { version = "=0.10.3", path = "../../mollusk/programs/token" }
solana-account = "=3.4.0"
solana-instruction = "=3.2.0"
solana-keypair = "=3.1.2"
solana-program-error = "=3.0.0"
solana-program-option = "=3.0.0"
solana-program-pack = "=3.0.0"
solana-pubkey = "=4.1.0"
solana-rent = "=3.0.0"
solana-sha256-hasher = "=3.1.0"
solana-signer = "=3.0.0"
solana-system-interface = { version = "=3.1.0", features = ["bincode"] }
solana-sysvar = "=3.1.1"
spl-associated-token-account-interface = { version = "=2.0.0", path = "../interface" }
spl-token-interface = "=2.0.0"
spl-token-2022-interface = "=2.1.0"
