[package]
name = "spl-associated-token-account-mollusk-harness"
version = "1.0.0"
description = "SPL Associated Token Account Mollusk Testing Harness"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
solana-account = "4.2"
solana-instruction = "3.3"
solana-program-error = "3.0"
solana-program-option = "3.1"
solana-program-pack = "3.1"
solana-pubkey = "4.1"
solana-rent = "4.1"
solana-system-interface = { version = "3.1", features = ["bincode"] }
solana-sysvar = "3.1"
spl-associated-token-account-interface = { version = "2.0", path = "../interface" }
spl-token-interface = "2.0"
spl-token-2022-interface = "2.1"

# TODO: Waiting on upstream Mollusk release support for:
#   PR #203 (Agave 4.x runtime): https://github.com/anza-xyz/mollusk/pull/203
mollusk-svm = { version = "0.11.0", git = "https://github.com/grod220/mollusk", branch = "dep-updates-4.0" }
mollusk-svm-programs-token = { version = "0.11.0", git = "https://github.com/grod220/mollusk", branch = "dep-updates-4.0" }
