[package]
name = "spl-associated-token-account-mollusk-harness"
version = "1.0.0"
description = "SPL Associated Token Account Mollusk Testing Harness"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
pinocchio-associated-token-account-interface = { path = "../pinocchio/interface" }
solana-account = "4.3"
solana-instruction = "3.4"
solana-program-error = "3.0"
solana-program-option = "3.1"
solana-program-pack = "3.1"
solana-pubkey = "4.2"
solana-rent = "4.1"
solana-sdk-ids = "3.1"
solana-system-interface = { version = "3.2", features = ["bincode"] }
spl-associated-token-account-interface = { version = "2.0", path = "../interface" }
spl-token-interface = "2.0"
spl-token-2022-interface = "3.0"
wincode = "0.5.4"

mollusk-svm = { version = "0.12.0-agave-4.0", git = "https://github.com/anza-xyz/mollusk", branch = "agave-4.0" }
mollusk-svm-programs-token = { version = "0.12.0-agave-4.0", git = "https://github.com/anza-xyz/mollusk", branch = "agave-4.0" }
