[workspace]

[package]
name = "pinocchio-ata-program"
version = "0.1.0"
description = "A pinocchio-based Associated Token Account (aka 'p-ata') program"
readme = "./README.md"
autobenches = false
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["create-prefunded-account"]
create-prefunded-account = []
build-programs = []
full-debug-logs = []
std = [
    "bincode",
    "bs58",
    "colored",
    "comfy-table",
    "curve25519-dalek",
    "itertools",
    "mollusk-svm",
    "mollusk-svm-bencher",
    "rstest",
    "serde",
    "serde_json",
    "solana-account",
    "solana-instruction",
    "solana-keypair",
    "solana-logger",
    "solana-program",
    "solana-program-test",
    "solana-pubkey",
    "solana-sdk",
    "solana-sdk-ids",
    "solana-sha256-hasher",
    "solana-signature",
    "solana-signer",
    "solana-system-interface",
    "solana-sysvar",
    "spl-associated-token-account",
    "spl-associated-token-account-client",
    "spl-token",
    "spl-token-2022",
    "spl-token-group-interface",
    "spl-token-metadata-interface",
    "strum",
    "test-case",
]

[build-dependencies]
serde_json = "1.0"
solana-pubkey = "2.2.1"

[patch.crates-io]
pinocchio = { version = "0.9.0", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account", default-features = false }
pinocchio-system = { version = "0.3.0", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account" }
indicatif = { git = "https://github.com/mitsuhiko/indicatif", tag = "0.18.0" }
solana-system-program = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "create-prefunded-account" }
solana-builtins = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "create-prefunded-account" }
solana-system-interface = { version = "1.0.0", git = "https://github.com/rustopian/system.git", branch = "create-prefunded-account" }
pinocchio-pubkey = { version = "0.3.0", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account" }
mollusk-svm = { version = "0.4.1", git = "https://github.com/rustopian/mollusk.git", branch = "rustopian/create-prefunded-account" }
mollusk-svm-bencher = { version = "0.4.1", git = "https://github.com/rustopian/mollusk.git", branch = "rustopian/create-prefunded-account" }

[dependencies]
# Non-optional dependencies
pinocchio = { version = "0.9.0", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account", default-features = false }
pinocchio-log = { version = "0.4", features = ["macro"] }
pinocchio-pubkey = { version = "0.3.0", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account" }
pinocchio-system = { version = "0.3.0", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account" }
pinocchio-token = "0.3.0"
solana-program-option = "2.2.1"
spl-token-interface = { version = "^0", git = "https://github.com/solana-program/token.git" }
spl-token-2022-interface = "0.0.0"

# Optional dependencies for testing and benchmarking
# (benching does not use dev-dependencies)
bincode = { version = "1.3.3", optional = true }
bs58 = { version = "0.4.0", optional = true }
colored = { version = "2.0", optional = true }
comfy-table = { version = "7", optional = true }
curve25519-dalek = { version = "4.1.3", default-features = false, optional = true }
itertools = { version = "0.12", optional = true }
mollusk-svm = { version = "0.4.1", git = "https://github.com/rustopian/mollusk.git", branch = "rustopian/create-prefunded-account", features = ["all-builtins"], optional = true }
mollusk-svm-bencher = { version = "0.4.1", git = "https://github.com/rustopian/mollusk.git", branch = "rustopian/create-prefunded-account", optional = true }
rstest = { version = "0.26.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
solana-account = { version = "2.2.1", optional = true }
solana-instruction = { version = "2.3.0", optional = true }
solana-keypair = { version = "2.2.3", optional = true }
solana-logger = { version = "2.3.0", optional = true }
solana-program = { version = "2.3.0", optional = true }
solana-program-test = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "create-prefunded-account", optional = true }
solana-pubkey = { version = "2.2.1", features = ["curve25519"], optional = true }
solana-sdk = { version = "2.3.1", optional = true }
solana-sdk-ids = { version = "2.2.1", optional = true }
solana-sha256-hasher = { version = "2.3.0", optional = true }
solana-signature = { version = "2.3.0", optional = true }
solana-signer = { version = "2.2.1", optional = true }
solana-system-interface = { version = "1.0.0", git = "https://github.com/rustopian/system.git", branch = "create-prefunded-account", optional = true }
solana-sysvar = { version = "2.2.2", optional = true }
spl-associated-token-account = { version = "7.0.0", optional = true }
spl-associated-token-account-client = { version = "2.0.0", optional = true }
spl-token = { version = "8.0.0", features = ["no-entrypoint"], optional = true }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"], optional = true }
spl-token-group-interface = { version = "0.6.0", optional = true }
spl-token-metadata-interface = { version = "0.7.0", optional = true }
strum = { version = "0.27.1", features = ["derive"], optional = true }
test-case = { version = "3.3.1", optional = true }

[dev-dependencies]
# Test and benchmark frameworks
assert_matches = "1.5.0"
criterion = { version = "0.5", features = ["html_reports"] }
num-traits = "0.2"
rstest = "0.26.1"
test-case = "3.3.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync"] }

# Solana and crypto dependencies
bincode = "1.3.3"
bs58 = "0.4.0"
colored = "2.0"
comfy-table = "7"
curve25519-dalek = { version = "4.1.3", default-features = false }
itertools = "0.12"
mollusk-svm = { version = "0.4.1", git = "https://github.com/rustopian/mollusk.git", branch = "rustopian/create-prefunded-account", features = ["all-builtins"] }
mollusk-svm-bencher = { version = "0.4.1", git = "https://github.com/rustopian/mollusk.git", branch = "rustopian/create-prefunded-account" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account = "2.2.1"
solana-hash = "2.3.0"
solana-instruction = "2.3.0"
solana-keypair = "2.2.3"
solana-logger = "2.3.0"
solana-program = "2.3.0"
solana-program-test = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "create-prefunded-account" }
solana-pubkey = { version = "2.2.1", features = ["curve25519"] }
solana-sdk = "2.3.1"
solana-sdk-ids = "2.2.1"
solana-seed-derivable = "2.2.1"
solana-sha256-hasher = "2.3.0"
solana-signature = "2.3.0"
solana-signer = "2.2.1"
solana-system-interface = { version = "1.0.0", git = "https://github.com/rustopian/system.git", branch = "create-prefunded-account" }
solana-sysvar = "2.2.2"
spl-associated-token-account = "7.0.0"
spl-associated-token-account-client = "2.0.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-token-group-interface = "0.6.0"
spl-token-metadata-interface = "0.7.0"
strum = { version = "0.27.1", features = ["derive"] }

[[bench]]
name = "ata_instruction_benches"
path = "benches/ata_instruction_benches.rs"
harness = false
required-features = ["std"]

[[bench]]
name = "failure_scenarios"
path = "benches/failure_scenarios.rs"
harness = false
required-features = ["std"]
