[workspace]

[package]
name = "pinocchio-ata-program"
version = "0.1.0"
description = "A pinocchio-based Associated Token Account (aka 'p-ata') program"
readme = "./README.md"
autobenches = false
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["create-prefunded-account"]
create-prefunded-account = []
build-programs = []
std = []

[build-dependencies]
serde_json = "1.0"
solana-pubkey = "2.2.1"

[patch.crates-io]
pinocchio = { version = "0.9.2", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account", default-features = false }
pinocchio-pubkey = { version = "0.3.0", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account" }
pinocchio-system = { version = "0.3.0", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account" }
indicatif = { git = "https://github.com/mitsuhiko/indicatif", tag = "0.18.0" }
solana-system-program = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "create-prefunded-account" }
solana-builtins = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "create-account-allow-prefund" }
solana-system-interface = { version = "1.0.0", git = "https://github.com/rustopian/system.git", branch = "create-prefunded-account" }
mollusk-svm = { version = "0.4.1", git = "https://github.com/rustopian/mollusk.git", branch = "rustopian/create-prefunded-account" }
mollusk-svm-bencher = { version = "0.4.1", git = "https://github.com/rustopian/mollusk.git", branch = "rustopian/create-prefunded-account" }

[dependencies]
# Non-optional dependencies
pinocchio = { version = "0.9.2", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account", default-features = false }
pinocchio-log = { version = "0.4", features = ["macro"] }
pinocchio-pubkey = { version = "0.3.0", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account" }
pinocchio-system = { version = "0.3.0", git = "https://github.com/rustopian/pinocchio.git", branch = "create-prefunded-account" }
spl-token-interface = { version = "^0", git = "https://github.com/solana-program/token.git" }

[dev-dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false }
mollusk-svm = { version = "0.6.1", git = "https://github.com/rustopian/mollusk.git", branch = "rustopian/create-prefunded-account", features = ["all-builtins"] }
solana-keypair = "2.2.3"
solana-program = "2.3.0"
solana-pubkey = { version = "2.2.1", features = ["curve25519"] }
solana-sdk = "2.3.1"
solana-sdk-ids = "2.2.1"
solana-signer = "2.2.1"
spl-associated-token-account = "7.0.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-token-group-interface = "0.6.0"
spl-token-metadata-interface = "0.7.0"
ata-mollusk-harness = { version = "1.0.0", path = "../test-harness" }