[workspace]

[package]
name = "pinocchio-ata-program"
version = "0.1.0"
description = "A pinocchio-based Associated Token Account (aka 'p-ata') program"
readme = "./README.md"
autobenches = false
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["create-prefunded-account"]
create-prefunded-account = []
build-programs = []
std = []

[build-dependencies]
serde_json = "1.0.149"
solana-pubkey = "4.1.0"

[dependencies]
# Non-optional dependencies
curve25519-dalek = { version = "4.1.3", default-features = false }
pinocchio = { version = "0.10.1", git = "https://github.com/anza-xyz/pinocchio", rev = "9bb172e7a78875d29520e3398da97323173e0e66", default-features = false }
pinocchio-log = { version = "0.5.1", features = ["macro"] }
pinocchio-system = { version = "0.5.0", git = "https://github.com/anza-xyz/pinocchio", rev = "9bb172e7a78875d29520e3398da97323173e0e66" }
solana-sha256-hasher = "3.1.0"
solana-program-pack = "3.0.0"
spl-token-interface = "2.0.0"

[dev-dependencies]
mollusk-svm = { version = "0.10.3", path = "../../mollusk/harness", features = ["all-builtins"] }
solana-keypair = "3.1.2"
solana-pubkey = { version = "4.1.0", features = ["curve25519"] }
solana-sdk = "4.0.1"
solana-signer = "3.0.0"
spl-associated-token-account = { version = "8.0.0", path = "../program" }
spl-associated-token-account-mollusk-harness = { version = "1.0.0", path = "../mollusk_harness" }
spl-token-2022 = { version = "10.0.0", default-features = false, features = ["no-entrypoint"] }
spl-token-group-interface = "0.7.1"
spl-token-metadata-interface = "0.8.0"
