[package]
name = "spl-associated-token-account"
version = "8.0.0"
description = "Solana Program Library Associated Token Account"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.6.0"
num-derive = "0.4"
num-traits = "0.2"
solana-account-info = "3.1"
solana-cpi = "3.1"
solana-instruction = "3.2"
solana-msg = "3.0"
solana-program-entrypoint = "3.1"
solana-program-error = "3.0"
solana-pubkey = "4.1"
solana-rent = "3.1"
solana-sdk-ids = "3.1"
solana-system-interface = { version = "3.1", features = ["bincode"] }
solana-sysvar = "3.1"
spl-associated-token-account-interface = { version = "2.0.0", path = "../interface", features = ["borsh"] }
spl-token-interface = "2.0.0"
spl-token-2022-interface = "2.1.0"
thiserror = "2.0"

[dev-dependencies]
spl-associated-token-account-mollusk-harness = { version = "1.0.0", path = "../mollusk_harness" }
mollusk-svm = { version = "0.7.2" }
solana-keypair = "3.1"
solana-signer = "3.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
