[package]
name = "spl-associated-token-account"
version = "8.0.0"
description = "Solana Program Library Associated Token Account"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.6.1"
solana-account-info = "3.1"
solana-cpi = "3.1"
solana-instruction = "3.3"
solana-msg = "3.1"
solana-program-entrypoint = "3.1"
solana-program-error = "3.0"
solana-pubkey = { version = "4.1", default-features = false }
solana-rent = "3.1"
solana-sdk-ids = "3.1"
solana-system-interface = { version = "3.1", features = ["bincode"] }
solana-sysvar = "3.1"
spl-associated-token-account-interface = { version = "2.0.0", path = "../interface", features = ["borsh"] }
spl-token-interface = "3.0.0"
spl-token-2022-interface = "3.0.1"

[dev-dependencies]
mollusk-svm = "0.13.1"
spl-associated-token-account-mollusk-harness = { version = "1.0.0", path = "../mollusk_harness" }
solana-program-pack = "3.1"
test-case = "3.3.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
