[package]
name = "ata-mollusk-harness"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
mollusk-svm = { version = "0.6.2" }
mollusk-svm-programs-token = { version = "0.6.2" }
solana-account = "3.0"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-program-error = "3.0"
solana-program-option = "3.0"
solana-program-pack = "3.0"
solana-pubkey = "3.0"
solana-rent = "3.0"
solana-signer = "3.0"
solana-system-interface = { version = "2.0", features = ["bincode"] }
solana-sysvar = "3.0"
spl-associated-token-account-interface = "2.0"
spl-token-interface = "2.0"
spl-token-2022-interface = "2.0"
