[package]
name = "spl-associated-token-account-client"
version = "0.1.0"
description = "Generated Rust client for the Associated Token Account program"
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[dependencies]
borsh = { version = "1.6.1", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-account-info = "3.1.1"
solana-address = { version = "2.6.0", features = ["copy"] }
solana-cpi = "3.1.0"
solana-instruction = "3.4.0"
solana-program-error = "3.0.1"
thiserror = "2.0.18"

[lints]
workspace = true
