[package]
name = "spl-token-interface"
version = "0.0.0"
description = "Instructions and types for interacting with SPL Token program"
readme = "./README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { version = "0.8.4", git = "https://github.com/rustopian/pinocchio.git", branch = "create-account-prefunded", default-features = false }
pinocchio-pubkey = "0.2.4"

[dev-dependencies]
strum = "0.27"
strum_macros = "0.27"
