[package]
name = "pinocchio-associated-token-account-interface"
version = "0.1.0"
description = "Pinocchio instructions and types for interacting with the Associated Token Account program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
codama = ["dep:codama", "dep:codama-macros"]

[dependencies]
codama = { version = "0.9.2", optional = true }
codama-macros = { version = "0.9.1", optional = true }
pinocchio = { workspace = true }
solana-address = { version = "2.6.1", features = ["curve25519", "decode"] }
solana-nullable = { version = "1.1.1", features = ["wincode"] }
solana-zero-copy = { version = "1.1.1", features = ["wincode"] }
wincode = { version = "0.5.5", default-features = false, features = ["derive"] }

[package.metadata.solana]
program-id = "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"

[lints]
workspace = true
