[package]
name = "pinocchio-associated-token-account-program"
version = "0.1.0"
description = "A pinocchio-based Associated Token Account program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.solana]
program-id = "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"

[lints]
workspace = true

[dependencies]
pinocchio-associated-token-account-interface = { path = "../interface" }
pinocchio-log = { version = "0.5.1", features = ["macro"] }
pinocchio-system = "0.5.0"
pinocchio-token = "0.6.0"

# TODO: Waiting on PR #349 to merge and then be released: https://github.com/anza-xyz/pinocchio/pull/349.
#       We need StateWithExtensions API from that PR.
pinocchio = { version = "0.10.1", git = "https://github.com/anza-xyz/pinocchio", rev = "0ca7555836700b31dae01ef6da37ef66df1831b8", default-features = false, features = ["cpi"] }

# TODO: Waiting on a pinocchio-system release that includes CreateAccountAllowPrefund ix builder
pinocchio-system-prefund = { package = "pinocchio-system", version = "0.5.0", git = "https://github.com/anza-xyz/pinocchio", rev = "009301423f920fd105bd32a25560d127b6f0bf4f" }
pinocchio-token-2022 = { version = "0.2.0", git = "https://github.com/anza-xyz/pinocchio", rev = "0ca7555836700b31dae01ef6da37ef66df1831b8" }

[dev-dependencies]
mollusk-svm = { version = "0.12.0-agave-4.0", git = "https://github.com/anza-xyz/mollusk", branch = "agave-4.0" }
mollusk-svm-bencher = { version = "0.12.0-agave-4.0", git = "https://github.com/anza-xyz/mollusk", branch = "agave-4.0" }
mollusk-svm-programs-token = { version = "0.12.0-agave-4.0", git = "https://github.com/anza-xyz/mollusk", branch = "agave-4.0" }
mollusk-svm-result = { version = "0.12.0-agave-4.0", git = "https://github.com/anza-xyz/mollusk", branch = "agave-4.0" }
solana-account = "4.3.0"
solana-address = "2.6.0"
solana-instruction = "3.4.0"
solana-logger = "3.0.0"
solana-program-error = "3.0.0"
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
solana-rent = "4.1.0"
solana-system-interface = "3.2.0"
spl-associated-token-account-interface = { path = "../../interface" }
spl-associated-token-account-mollusk-harness = { path = "../../mollusk_harness" }
spl-token-2022-interface = "2.1.0"
spl-token-interface = "2.0.0"
test-case = "3.3.1"

[[bench]]
name = "compute_units"
harness = false
