[package]
name = "pinocchio-associated-token-account-program"
version = "0.1.0"
description = "A pinocchio-based Associated Token Account program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.solana]
program-id = "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"

[lints]
workspace = true

[dependencies]
pinocchio-associated-token-account-interface = { path = "../interface" }
pinocchio-log = { version = "0.5.1", features = ["macro"] }
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"

# TODO: Pinned to PR #415 (https://github.com/anza-xyz/pinocchio/pull/415) for the
#       `try_calculate_account_len_from_mint` helper.
pinocchio = { version = "0.11.1", git = "https://github.com/anza-xyz/pinocchio", rev = "8a5bf6eec7e0c6f3e52bbab004e8e2cc43bd2188", default-features = false, features = ["cpi"] }
pinocchio-token-2022 = { version = "0.3.1", git = "https://github.com/anza-xyz/pinocchio", rev = "8a5bf6eec7e0c6f3e52bbab004e8e2cc43bd2188" }

[dev-dependencies]
mollusk-svm = { version = "0.13.1", features = ["inner-instructions"] }
mollusk-svm-bencher = "0.13.1"
mollusk-svm-programs-token = "0.13.1"
mollusk-svm-result = { version = "0.13.1", features = ["inner-instructions"] }
proptest = "1.11"
solana-account = "3.4.0"
solana-address = "2.6.0"
solana-instruction = "3.3.0"
solana-logger = "3.0.0"
solana-program-error = "3.0.0"
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
solana-rent = "4.1.0"
solana-system-interface = "3.1.0"
spl-associated-token-account-interface = { path = "../../interface" }
spl-associated-token-account-mollusk-harness = { path = "../../mollusk_harness" }
spl-token-2022-interface = "3.0.1"
spl-token-group-interface = "0.7.2"
spl-token-interface = "2.0.0"
test-case = "3.3.1"

[[bench]]
name = "compute_units"
harness = false
