[package]
name = "pinocchio-associated-token-account-program"
version = "0.1.0"
description = "A pinocchio-based Associated Token Account program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.solana]
program-id = "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"

[lints]
workspace = true

[dependencies]
pinocchio = { workspace = true, features = ["cpi"] }
pinocchio-associated-token-account-interface = { path = "../interface" }
pinocchio-log = { version = "0.5.1", features = ["macro"] }
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"
pinocchio-token-2022 = { workspace = true }
solana-program-pack = "3.1.0"
spl-token-2022-interface = "3.1.0"

[dev-dependencies]
mollusk-svm = { workspace = true, features = ["inner-instructions"] }
mollusk-svm-bencher = { workspace = true }
mollusk-svm-programs-token = { workspace = true }
mollusk-svm-result = { workspace = true, features = ["inner-instructions"] }
solana-account = "4.3.0"
solana-address = "2.6.1"
solana-instruction = "3.3.0"
solana-logger = "3.0.0"
solana-program-error = "3.0.0"
solana-program-option = "3.1.0"
solana-rent = "4.1.0"
solana-system-interface = "3.1.0"
spl-associated-token-account-interface = { path = "../../interface" }
spl-associated-token-account-mollusk-harness = { path = "../../mollusk_harness" }
spl-token-interface = "2.0.0"
test-case = "3.3.1"

[[bench]]
name = "compute_units"
harness = false
