[package]
name = "mock_token_program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-account-info = "3.1"
solana-cpi = "3.1"
solana-instruction = "3.3"
solana-program-entrypoint = "3.1"
solana-program-error = "3.0"
solana-pubkey = "4.1"

[lib]
crate-type = ["cdylib", "lib"]

[workspace]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
]
